# context-grep

./: LICENSE  README.md  context-grep.lua  dev-check.sh  flake.nix  overlay.nix  package.nix  supported-languages.nix
.github/workflows/: nix.yml
benchmark/: default.nix
context-grep-nvim/: .envrc  Makefile  context-grep-nvim  context-grep-nvim.lua  default.nix  dev-check.sh  format.sh  pre-commit
context-grep-rs/: .envrc  Cargo.toml  Makefile  default.nix  dev-check.sh  pre-commit  wrapper.nix
context-grep-rs/src/: cli.rs  lang.rs  main.rs  models.rs  printer.rs  search.rs
context-grep-schema/: .envrc  Makefile  context-grep.schema.json  default.nix  generate
gen-schema/: Makefile  default.nix  sample.lua
nvim-plugin-grammars/: default.nix
test/: run_tests.sh  sample.lua
test-harness/: .envrc  Makefile  default.nix  dev-check.sh  test-harness
test-harness/sample-data/: sample.md  sample2.lua
