[package]
name = "context-grep"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
streaming-iterator = "0.1"
libloading = "0.8"
file-identify = "0.4.0"
